<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a Button</string>
    <string name="message">Look at my GUI</string>
    <string name="toast_message">Click here!</string>
    <string name="Checkbox">Checkbox</string>
    <string name="Todo">Type here</string>
    <string name="Switch">Switch on/off</string>
    <string name="info">write here</string>
    <string name="person_info">put pesron name</string>
    <string name="string_personal_info">Enter your email address:</string>
    <string name="personal_information">Type email here</string>
    <string name="password">Type your password</string>
    <string name="password_1">Type your important digit here</string>
    <string name="ButtonInfo">Login</string>
    <string name="message_profile">Your profile</string>
    <string name="profile_1">Your name:</string>
    <string name="message_name">Enter your name</string>
    <string name="email">your email:</string>
    <string name="email_address">Enter your email</string>
    <string name="picture">Your picture:</string>
    <string name="click">click the button to take a picture</string>
    <string name="String_click">Click on the button above to take a picture</string>
    <string name="send">Send</string>
    <string name="chathere">Chat here!</string>
    <string name="received">Received</string>
    <string name="chatroom">ChatRoom</string>
    <string name="chatrooms">ChatRooms</string>
    <string name="Todos">image</string>
    <string name="todo">TODO</string>
    <string name="right">TODO</string>
    <string name="current">Current Temperature:</string>
    <string name="min">Minimun Temperature:</string>
    <string name="max">Maximum Temperature:</string>
    <string name="uv">UV Rating:</string>
    <string name="WeatherForecast">Weather Forecast</string>


</resources>