<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:text="@string/message"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="4dp" />


<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:text="@string/toast_message"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="44dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:text="@string/Checkbox"
        tools:layout_editor_absoluteX="212dp"
        tools:layout_editor_absoluteY="44dp" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="218dp"
        android:layout_height="150dp"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:contentDescription="@string/Todo"
        android:src="@drawable/abc_vector_test" />

    <Switch
        android:id="@+id/switch7"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:text="@string/Switch" />
</LinearLayout>
    <EditText
        android:id="@+id/editView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:hint="@string/person_info"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />
</LinearLayout>