<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProfileActivity">

    <ListView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="666dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <Button
            android:id="@+id/send"
            android:layout_width="122dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/send"
            

        <EditText
            android:layout_width="178dp"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:hint="@string/chathere"
            android:autofillHints="no"/>
            " />

        <Button
            android:id="@+id/received"
            android:layout_width="109dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/received"

            />
    </LinearLayout>


</LinearLayout>